--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
 
     <ul id="shop-list"></ul>
 
-    <script src="./dist/bundle.js"></script>
+    <script src="../dist/bundle.js"></script>
   </body>
 </html>
