implement style module

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
     ></script>
   </head>
   <body>
-    <h1 id="header">This is a first simple webpack application</h1>
+    <h1 id="header" class="header">
+      This is a first simple webpack application
+    </h1>
     <button id="click-me">Click Me!</button>
 
     <ul id="shop-list"></ul>
