implement asset loading" "

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     ></script>
   </head>
   <body>
+    <img id="logo" />
     <h1 id="header" class="header">
       This is a first simple webpack application
     </h1>
